--- a/style.css
+++ b/style.css
@@ -1,12 +1,83 @@
-h1 {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 30px;
-}
-
-h2 {
-    margin: 0px;
-}
-
-body {
+*, *::before, *::after {
+    box-sizing: border-box;
+  }
+  
+  html {
+    font-size: 16px;
+    font-family: 'Tomorrow', sans-serif;
+    background-image: url("background.jpeg");
+  }
+  
+  body {
+    margin: 0;
+    padding: 0;
+    font-weight: normal; 
+  }
+  
+  .wrapper {
+    width: 800px;
+    margin: 0 auto;
     text-align: center;
+    background-color: rgb(0, 0, 0);
+    border: 1px solid #eceff1;
+    border-radius: auto;
+    margin-top: 80px;
+    padding: 20px;
+  }
+  
+  h1 {
+    font-size: 3em;
+    color: #fff;
+  }
+
+  h2 {
+    color: #fff;
+  }
+
+  #generate, #copy{
+    border-radius: 4px;
+    border-style: none;
+    box-shadow: rgba(34,36,38,.15) 0 0 0 0 inset;
+    color:#fff;
+    cursor: pointer;
+    font-family: 'Tomorrow', sans-serif;
+    font-size: 1em;
+    font-weight: 700;
+    line-height: 0;
+    padding: 20px ;
+  }
+  
+  #generate {
+    background-color:plum;
+  }
+  
+
+  #generate:hover {
+    background-color:mediumorchid;
+  }
+  
+  #copy {
+    background-color: gold;
+  }
+  
+  #copy:hover {
+    background-color: goldenrod;
+  }
+
+  body {
+    text-align: center;
+  }
+
+.button{
+    padding: 20px;
+}
+
+#password {
+    width: 500px;
+    height: 60px;
+    text-align: center;
+    font-size: 20px;
+    font-family:'Tomorrow', sans-serif;
+    font-stretch: 100%;
+    padding: 15px;
 }
